--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "name": "QuirkCase",
   "version": "1.0",
+  "author": "Leandro Araujo Gonzalez",
 
   "description": "Lets you WrItE lIkE tHiS eAsIlY. Just hold the ctrl key and click on a text field, and you will be prompted for your text.",
 
